--- a/public/common/global.css
+++ b/public/common/global.css
@@ -121,6 +121,7 @@ a {
     box-sizing: border-box;
     background-color: var(--card-bg);
     box-shadow: var(--card-shadow);
+    font-size: 0.9rem;
 }
 
 .card * {
@@ -129,7 +130,7 @@ a {
 }
 
 .card-title {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
 }
 
@@ -536,7 +537,7 @@ button.form-hidden-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     padding: 0;
 }
 
@@ -1052,16 +1053,13 @@ button.disabled-button:hover .button-wrapper {
         padding: var(--medium-gap);
     }
 
-    .button {
-        font-size: 1rem;
-    }
-
     .button i.lni {
         font-size: var(--icon-size);
     }
 
     .text-field {
         padding: 1rem;
+        font-size: 1rem;
     }
 
     .mobile-top-bar-button i {
